fixin layout problems with mediaQ

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,18 +17,13 @@
 
   .grid-container {
     background-color: #f1f1f1;
-    width: 100vw;
-    max-width: 1200px;
-    height: 100%;
-    min-height: 100vh;
-    margin: auto;
     display: grid;
     grid-template-areas:
       "header header"
       "aside main"
       "footer footer";
-    grid-template-rows: 3rem 1fr 3rem;
-    grid-template-columns: 180px 1fr;
+    grid-template-columns: 11rem 1fr;
+    grid-template-rows: 4rem 1fr 3rem;
   }
 
   /* Header CSS*/
@@ -45,6 +40,7 @@
   /* Aside CSS*/
 
   aside {
+    height: 90vh;
     grid-area: aside;
     display: flex;
     flex-direction: column;
@@ -79,7 +75,7 @@
 
   .products-galery {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, auto);
     gap: 1rem;
     padding: 1rem;
   }
@@ -87,12 +83,11 @@
   .items-card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     background-color: white;
     border-radius: 5%;
     overflow: hidden;
-    height: 400px;
+    gap: 1rem;
   }
 
   .items-card img {
@@ -100,7 +95,13 @@
   }
 
   .items-card h2 {
-    font-size: 1.5rem;
+    font-size: 1rem;
+  }
+
+  .items-card p {
+    font-size: 1.2rem;
+    color: green;
+    font-weight: bold;
   }
 
   .items-card .btn-item {
@@ -118,7 +119,6 @@
 
   /* Footer CSS*/
 
-
   footer {
     grid-area: footer;
     background-color: var(--primary-color);
@@ -126,4 +126,14 @@
     justify-content: center;
     align-items: center;
     color: white;
+  }
+
+  /* Responsive with media Queries*/
+
+  @media (max-width: 684px) {
+    .products-galery {
+      grid-template-columns: 1fr;
+
+    }
+
   }
